crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__diff__committed_first_change.snap
---
source: crates/diffo-app/src/diff/rendering_tests/diff.rs
expression: "renderer.diff_lines(&model, 80, transition.vertical, 1)[0]"
---
Line::from_iter([
    Span::from(" 450 - ").red().bg(Color::Indexed(52)),
    Span::from("old line ").fg(Color::Rgb(248, 248, 242)).bg(Color::Indexed(52)),
    Span::from("449").fg(Color::Rgb(190, 132, 255)).bg(Color::Indexed(52)),
    Span::from("                                                             ").bg(Color::Indexed(52)),
])
