crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__diff__hunk_markers_have_a_separate_clickable_rail_beside_the_scrollbar.snap
---
source: crates/diffo-app/src/diff/rendering_tests/diff.rs
expression: "buffer_region(terminal.backend().buffer(),\nRect::new(renderer.scrollbars.vertical_area.x,\nrenderer.scrollbars.vertical_area.y, 2,\nrenderer.scrollbars.vertical_area.height,),)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 2, height: 27 },
    content: [
        "█",
        "█│",
        "█│",
        "█│",
        "█│",
        "█│",
        "█│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║│",
        "║",
        "║│",
        "║│",
        "║│",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Indexed(52), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: DarkGray, bg: Indexed(22), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
