crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__diff__next_button.snap
---
source: crates/diffo-app/src/diff/rendering_tests/diff.rs
expression: "buffer_region(terminal.backend().buffer(), next_area)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 73, height: 1 },
    content: [
        "                             Next change (n)                            ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Indexed(52), underline: Reset, modifier: BOLD,
    ]
}
