crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__diff__renders_invalid_patches_as_raw_text.snap
---
source: crates/diffo-app/src/diff/rendering_tests/diff.rs
expression: lines
---
[
    Line::from("diff --cc src/main.rs"),
    Line::from("@@@ malformed"),
    Line::from("+raw line"),
]
